--- a/nameinitialscircleimageview/build.gradle
+++ b/nameinitialscircleimageview/build.gradle
@@ -15,7 +15,7 @@ ext {
     siteUrl = 'https://github.com/informramiz/NameInitialsCircleImageView'
     gitUrl = 'https://github.com/informramiz/NameInitialsCircleImageView.git'
 
-    libraryVersion = versionName
+    libraryVersion = "1.1.0"
 
     developerId = 'informramiz'
     developerName = 'Ramiz Raja'
@@ -27,13 +27,13 @@ ext {
 }
 
 android {
-    compileSdkVersion 27
+    namespace 'name-initials-circle-image-view'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
-        versionCode versionCode
-        versionName versionName
+        targetSdkVersion 33
+        versionCode 110
+        versionName "1.1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -50,17 +50,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation "com.android.support:appcompat-v7:$support_libs_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     api 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation'com.squareup.picasso:picasso:2.5.2'
 }
-
-apply from: 'https://raw.githubusercontent.com/informramiz/SimpleDayPicker/master/daypickerlibrary/bintray.gradle'
-apply from: 'https://raw.githubusercontent.com/informramiz/SimpleDayPicker/master/daypickerlibrary/install.gradle'
