--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,12 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+
 include ':app', ':nameinitialscircleimageview'
